[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "emt-tools-ecosystem"
version = "0.1.0"
description = "EMT Tools Ecosystem"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Md Aamir Enam", email = "aamir.enam@easemytrip.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "python-dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
        "pycryptodome>=3.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "emt_client",
    "tools_factory",
]

[dependency-groups]
dev = [
    "pytest-html>=4.1.1",
]


